--- a/.gitignore
+++ b/.gitignore
@@ -385,12 +385,12 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+FrontEnd/PortfolioProjectFrontEnd/.vscode/*
+!FrontEnd/PortfolioProjectFrontEnd/.vscode/settings.json
+!FrontEnd/PortfolioProjectFrontEnd/.vscode/tasks.json
+!FrontEnd/PortfolioProjectFrontEnd/.vscode/launch.json
+!FrontEnd/PortfolioProjectFrontEnd/.vscode/extensions.json
+FrontEnd/PortfolioProjectFrontEnd/.history/*
 
 # Miscellaneous
 /.angular/cache
