Improved structure IdentityController added for Swagger authorization Added CreatedDate and UpdatedDate to User Entity Implementation of Created- and UpdatedDate

--- a/BackEnd/API/Properties/launchSettings.json
+++ b/BackEnd/API/Properties/launchSettings.json
@@ -1,31 +1,33 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:61591",
-      "sslPort": 44392
-    }
-  },
+{
   "profiles": {
     "API": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7281;http://localhost:5281",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:6001"
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchUrl": "https://localhost:6001/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:6001"
+      },
+      "distributionName": ""
+    },
+    "Production": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+    "Seed": {
+      "commandName": "Project",
+      "commandLineArgs": "/seed"
     }
-  }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
