--- a/BackEnd/API/appsettings.json
+++ b/BackEnd/API/appsettings.json
@@ -1,9 +1,23 @@
 {
+  "ConnectionStrings": {
+    "PortfolioConnection": "Server=localhost;Database=Portfolio;Trusted_Connection=true;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServer": {
+    "Authority": "https://localhost:5001",
+    "Clients": {
+      "M2MClient": {
+        "ClientId": "M2Mclient",
+        "ClientSecret": "supersecret",
+        "AllowedScopes": [ "portfolioapi" ],
+        "AccessTokenLifetime": 3600
+      }
+    }
+  }
 }
